--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,16 @@
 node_modules
 /dist
 
+/lib
+/src
+/packages
+/public
+vue.config.js
+babel.config.js
+*.map
+*.html
+
+
 
 # local env files
 .env.local
